# gfx-vcpkg-cache

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/actions/setup-vcpkg/: action.yaml
.github/workflows/: nightly-cache.yaml  test-export.yaml  vcpkg.yaml
src/: main.cc
workflows/: vcpkg.yaml
